@@ -171,7 +171,8 @@ where <encoding> is the corresponding java name for this encoding." e e)))
                                         ("groovy_complete" "Groovy" "Eclipse Groovy Development Tools")
                                         ("ruby_complete" "Ruby" "Eclipse Ruby Development Tools")
                                         ("c_complete" "C/C++" "Eclipse C/C++ Development Tools")
-                                        ("php_complete" "PHP" "Eclipse PHP Development Tools")))))
+                                        ("php_complete" "PHP" "Eclipse PHP Development Tools")
+                                        ("scala_complete" "Scala" "Eclipse Scala Development Tools")))))
                 (if c (error "Eclim was not installed with %s support. Please make sure that %s are installed, then reinstall eclim." (first c) (second c))
                   (error result))))
              ((string-match ".*Exception: \\(.*\\)" result)
@@ -471,7 +472,7 @@ FILENAME is given, return that file's  project name instead."
     (remove-hook 'after-save-hook 'eclim--after-save-hook 't)))
 
 (defcustom eclim-accepted-file-regexps
-  '("\\.java" "\\.js" "\\.xml" "\\.rb" "\\.groovy" "\\.php" "\\.c" "\\.cc" "\\.h")
+  '("\\.java" "\\.js" "\\.xml" "\\.rb" "\\.groovy" "\\.php" "\\.c" "\\.cc" "\\.h" "\\.scala")
   "List of regular expressions that are matched against filenames
 to decide if eclim should be automatically started on a
 particular file. By default all files part of a project managed
@@ -508,7 +509,7 @@ the use of eclim to java and ant files."
                (groovy-mode "groovy_src_update")
                (ruby-mode "ruby_src_update")
                (php-mode "php_src_update")
-
+               (scala-mode "scala_src_update")
                ((c-mode c++-mode) "c_src_update")
                ((javascript-mode js-mode) "javascript_src_update"))
              (eclim--expand-args (list "-p" "-f")))))
