@@ -1,4 +1,5 @@
 (define-package "emacs-eclim" "0.3"
   "An interface to the Eclipse IDE."
   '((json "1.2")
+    (popup "v0.5.2")
     (s "1.9.0")))
