@@ -20,7 +20,8 @@
  * User commands for adding, listing and removing project natures.
  * Running all JUnit tests in a class or just the test method at point.
  * additional info in modeline about errors and warnings
-
+ * added support for scala completion
+ 
 === Bugfixes
  * removed extra parentheses around function
  * fixed a problem on startup when the eclimd server was not started
